Org: Remove workaround for layout bug - fixes #738

--- a/github-dark.css
+++ b/github-dark.css
@@ -1572,11 +1572,6 @@
       display: none !important;
     }
   }
-  /* GitHub Bug: Fix org layout issue */
-  /* https://github.com/isaacs/github/issues/934 */
-  .user-profile-repo-filter {
-    width: 100% !important;
-  }
   /* Tweak: Square counters, add 1px padding on bottom to counter uneven font size */
   #conversation_tab_counter, #commits_tab_counter, #files_tab_counter,
   .reponav-item .counter, .reponav-item .Counter {
